--- a/package.json
+++ b/package.json
@@ -9,39 +9,50 @@
     "export": "next export"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@shadcn/ui": "^0.0.4",
-    "dotenv": "^8.2.0",
+    "autoprefixer": "^10.4.20",
+    "caniuse-lite": "",
+    "dotenv": "^16.4.5",
     "encoding": "^0.1.13",
-    "firebase": "^9.23.0",
-    "framer-motion": "^2.7.5",
-    "globby": "^11.0.0",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.5.3",
-    "next-compose-plugins": "^2.2.0",
-    "next-optimized-images": "^2.5.4",
-    "prettier": "^2.1.2",
-    "rc-drawer": "^4.1.0",
-    "react": "16.13.0",
+    "firebase": "^11.0.1",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.11.10",
+    "globby": "^14.0.2",
+    "gsap": "^3.12.5",
+    "isomorphic-unfetch": "^4.0.2",
+    "next": "^15.0.1",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "rc-drawer": "^7.2.0",
+    "react": "^18.3.1",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "16.13.0",
-    "react-ga": "^3.1.2",
-    "react-icons": "^3.11.0",
+    "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
+    "react-floating-whatsapp": "^5.0.8",
+    "react-ga": "^3.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
-    "react-modal-video": "1.2.6",
-    "react-multi-carousel": "^2.5.5",
-    "react-scroll": "^1.8.0",
-    "react-slick": "^0.29.0",
-    "react-stickynode": "^3.0.3",
-    "request": "^2.79.0",
+    "react-modal-video": "2.0.2",
+    "react-multi-carousel": "^2.8.5",
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "react-stickynode": "^4.1.1",
+    "request": "^2.88.2",
     "slick-carousel": "^1.8.1",
-    "theme-ui": "^0.3.1",
-    "typeface-dm-sans": "^1.1.3"
+    "tailwindcss": "^3.4.14",
+    "theme-ui": "^0.17.1",
+    "typeface-dm-sans": "^1.1.13",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^8.0.0",
-    "next-sitemap": "^1.2.4",
-    "react-router-dom": "^6.25.1"
+    "imagemin-svgo": "^11.0.1",
+    "next-sitemap": "^4.2.3",
+    "react-router-dom": "^6.27.0"
   }
 }
